// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task Tracking Service getClients returns the correct data for the week of August 12 using mock data 1`] = `
Array [
  Object {
    "Id": 27,
    "Name": "X by 2",
    "isDefault": false,
  },
  Object {
    "Id": 48,
    "Name": "Auto-Owners Insurance",
    "isDefault": true,
  },
]
`;

exports[`Task Tracking Service getMonthlyTasks returns the correct data for the week of August 12 using mock data 1`] = `
Array [
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-01T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-02T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-03T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-04T04:00:00.000Z",
    "description": "",
    "hours": 4,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
]
`;

exports[`Task Tracking Service getWeeklyTasks returns the correct data for the week of August 12 using mock data 1`] = `
Array [
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-07-31T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-01T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-02T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-03T04:00:00.000Z",
    "description": "",
    "hours": 8,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
  Object {
    "activityId": null,
    "clientId": null,
    "clientName": "Auto-Owners Insurance",
    "date": "2017-08-04T04:00:00.000Z",
    "description": "",
    "hours": 4,
    "isBillable": true,
    "minutes": 0,
    "projectId": null,
    "projectName": "",
    "taskId": null,
    "taskName": "",
  },
]
`;
